plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.8'
    id 'com.gluonhq.client-gradle-plugin' version '0.1.23'
}

mainClassName = 'com.openjfx.database.app.DatabaseFX'
sourceCompatibility = 11

applicationDefaultJvmArgs = ['-Djdk.gtk.version=2','-Dsun.java2d.opengl=true']

group 'com.openjfx.database'
version '1.0-SNAPSHOT'

javafx {
    version = "11.0.2"
    modules = ['javafx.controls', 'javafx.fxml', 'javafx.base', 'javafx.graphics']
}

dependencies {
    compile project(":common")
    compile project(":mysql")
    compile 'com.jfoenix:jfoenix:9.0.8'
    compile group: 'org.controlsfx', name: 'controlsfx', version: '11.0.1'
    compile group: 'org.fxmisc.richtext', name: 'richtextfx', version: '0.10.4'
}

//解决window平台下中文乱码问题
tasks.withType(JavaCompile) {
    options.encoding = "UTF-8"
}

jar {
    from {
        //添加依懒到打包文件
        configurations.runtime.collect { zipTree(it) }
    }
    manifest {
        attributes "Manifest-Version": 1.0
        attributes 'Main-Class': 'com.openjfx.database.app.DatabaseFX'
        attributes 'Multi-Release': true
    }
}

//jlink {
//     comment_line './graalvm/bin/jlink --module-path /home/yangkui/application/javafx-jmods-11.0.2/ --add-modules javafx.base,javafx.controls,javafx.fxml,javafx.graphics,java.logging,java.management --output /home/yangkui/runtine'
//}